Fixed alignments and padding

--- a/portfolio/src/css/Achievements.css
+++ b/portfolio/src/css/Achievements.css
@@ -1,12 +1,13 @@
 .achievements {
-    height: 94vh;
-    width: 96vw;
+    height: fit-content;
+    width: fit-content;
     /* justify-content: center; */
     /* padding: 40px; */
 }
 
 .achievements > h2 {
     justify-self: center;
+    justify-content: center;
     color: #8892B0;
     font-size: 7vh;
 }
@@ -15,7 +16,7 @@
     display: flex;
     flex-direction: row;
     flex-flow: wrap;
-    /* justify-content: space-between; */
+    justify-content: center;
     align-items: center;
     padding-left: 10px;
 }
