--- a/portfolio/src/css/Cards.css
+++ b/portfolio/src/css/Cards.css
@@ -7,9 +7,10 @@
     justify-content: space-between;
     cursor: pointer;
     transition: transform 500ms ease-out;
-    width: 20vw;
-    height: 20vh;
-    margin-left: 10vh;
+    width: 30vh;
+    height: 40vh;
+    margin-left: 5vh;
+    margin-bottom: 20px;
     /* margin-bottom: 3vh; */
     /* padding-left: 20vh */
 }
